config-root/namespaces/jx-production/quick-php-hello/quick-php-hello-quick-php-hello-deploy.yaml
# Source: quick-php-hello/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quick-php-hello-quick-php-hello
  labels:
    draft: draft-app
    chart: "quick-php-hello-0.0.2"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'quick-php-hello'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: quick-php-hello-quick-php-hello
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: quick-php-hello-quick-php-hello
    spec:
      serviceAccountName: quick-php-hello-quick-php-hello
      containers:
        - name: quick-php-hello
          image: "289636418460.dkr.ecr.eu-west-1.amazonaws.com/ait-af-bot/quick-php-hello:0.0.2"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
