config-root/namespaces/jx-production/quick-php-hello/quick-php-hello-svc.yaml
# Source: quick-php-hello/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quick-php-hello
  labels:
    chart: "quick-php-hello-0.0.3"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'quick-php-hello'
  namespace: jx-production
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: quick-php-hello-quick-php-hello
